--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sorting-visulizer",
+  "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,14 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
