--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
